--- a/JSRPG/index.html
+++ b/JSRPG/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<script src="code/engine.js" >
+<script src="Code/engine.js" >
 </script>
-<script src="code/definitions.js" >
+<script src="Code/definitions.js" >
 </script>
 <script>
 function start_scroll_down() {
@@ -76,7 +76,7 @@ End
 </div>
 </div>
 </center>
-<script src="code/startup.js" >
+<script src="Code/startup.js" >
 </script>
 </body>
 </html>
